# thrill

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  CPPLINT.cfg  CTestConfig.cmake  Doxyfile  LICENSE  README.md  Styleguide.md  compile.sh  setup.sh  test.sh
benchmarks/: CMakeLists.txt  bench.cpp  bench_ref.cpp  bench_ref.cpp~  bench_table.cpp  edit_graph.cpp  generate_data.cpp  generate_numbers.cpp  word_count.cpp
benchmarks/api/: CMakeLists.txt  generate_numbers.cpp  generate_write_binary.cpp  groupby.cpp  groupby2.cpp  groupby_unequal_keys.cpp  merge.cpp  read_write_lines.cpp  sort.cpp  string_test.cpp
benchmarks/chaining/: CMakeLists.txt  cache_count.cpp  chain_count.cpp  collapse_count.cpp  evaluate.py  helper.hpp  run.sh
benchmarks/core/: duplicates_speedup_benchmark.cpp  golomb_code_benchmark.cpp  golomb_code_benchmark.py
benchmarks/data/: CMakeLists.txt  allocate.cpp  channel.cpp  channel_a_to_b.cpp  channel_read_write.cpp  channel_scatter.cpp  data_benchmark.cpp  data_generators.hpp  disk.cpp  file_read_write.cpp  io_benches.cpp  run_data_benchmark.sh  stream.cpp  stream_a_to_b.cpp  stream_read_write.cpp  stream_scatter.cpp
benchmarks/dc3/: CMakeLists.txt  dc3.cpp
benchmarks/duplicates/: bench_golomb.cpp  bench_golomb.py  reduce.cpp
benchmarks/groupby/: CMakeLists.txt  groupby.cpp  groupby2.cpp  groupby_unequal_keys.cpp
benchmarks/hashtable/: bench_bucket_hashtable.cpp  bench_bucket_hashtable.py  bench_hashtable.cpp  bench_hashtable.py  bench_probing_hashtable.cpp  bench_probing_hashtable.py  bench_table.cpp  bench_table.py  generate_data.cpp  graph_gen.py  reduce.cpp
benchmarks/io/: benchmark_disks.cpp  benchmark_disks_random.cpp  benchmark_files.cpp  string_test.cpp
benchmarks/mem/: CMakeLists.txt  pool_benchmark.cpp
benchmarks/merge/: CMakeLists.txt  merge.cpp
benchmarks/net/: CMakeLists.txt  broadcast.cpp  net_benchmark.cpp  ping_pong.cpp  prefixsum.cpp
benchmarks/page_rank/: CMakeLists.txt  page_rank.cpp  page_rank_bench.cpp
benchmarks/prefix_doubling/: CMakeLists.txt  prefix_doubling.cpp
benchmarks/serialization/: bench_serialization.cpp  cpp-serializers  cpp-serializers.cpp  data.hpp
benchmarks/sort/: generate_data.cpp  sort.cpp
benchmarks/word_count/: CMakeLists.txt  bench.py  graph_gen.py  line_count.cpp  random_text_writer.cpp  word_count.cpp  word_count_bench.cpp  word_count_gen.cpp
benchmarks/wordcount/: 16_workers  1_workers  2_workers  3_workers  4_workers  8_workers  bench.py  graph_gen.py
c7a/: CMakeLists.txt  c7a.hpp  test_serialize_object.proto
c7a/api/: action_node.hpp  allgather.hpp  allgather_node.hpp  bootstrap.cpp  bootstrap.hpp  cache.hpp  collapse.hpp  context.cpp  context.hpp  dia.hpp  dia_base.hpp  dia_node.hpp  distribute.hpp  distribute_from.hpp  dop_node.hpp  function_stack.hpp  function_traits.hpp  gather.hpp  generate.hpp  generate_file_node.hpp  generate_from_file.hpp  generate_node.hpp  generator_node.hpp  graph.hpp  input_line_iterator.hpp  lop_composer.hpp  lop_node.hpp  merge.hpp  node_include.hpp  prefixsum.hpp  prefixsum_node.hpp  read.hpp  read_binary.hpp  read_lines.hpp  read_node.hpp  reduce.hpp  reduce_node.hpp  reduce_to_index.hpp  reduce_to_index_node.hpp  scatter.hpp  (+15 more)
c7a/common/: allocator.hpp  atomic_movable.hpp  cmdline_parser.cpp  cmdline_parser.hpp  concurrent_bounded_queue.hpp  concurrent_queue.hpp  config.hpp  cyclic_barrier.hpp  delegate.hpp  function_traits.hpp  functional.hpp  future.hpp  future_queue.hpp  item_serialization_tools.hpp  item_serializer_tools.hpp  logger.cpp  logger.hpp  math.hpp  sequentializer.hpp  stats.hpp  stats_counter.hpp  stats_timer.hpp  string.cpp  string.hpp  thread_barrier.hpp  thread_pool.cpp  thread_pool.hpp  timed_counter.hpp  timer.hpp  types.hpp
c7a/communication/: blocking_channel.cpp  blocking_channel.hpp  blocking_connection.hpp  communication_manager.cpp  communication_manager.hpp  execution_endpoint.hpp  flow_control_channel.cpp  flow_control_channel.hpp  net-connection.hpp  net-group.cpp  net-group.hpp  net_connection.hpp  net_dispatcher.hpp  select.cpp  select.hpp  socket.cpp  socket.hpp  socket_address.cpp  socket_address.hpp  system_control_channel.cpp  system_control_channel.hpp
c7a/core/: allocator.hpp  allocator_base.hpp  hash_table.hpp  job_manager.hpp  malloc_count.cpp  malloc_count.hpp  malloc_tracker.cpp  malloc_tracker.hpp  memory_manager.hpp  reduce_post_probing_table.hpp  reduce_post_table.hpp  reduce_pre_linpro_table.hpp  reduce_pre_probing_table.hpp  reduce_pre_table.hpp  reduce_pre_table_bench.hpp  stage_builder.hpp
c7a/data/: binary.hpp  binary_buffer.hpp  binary_buffer_builder.hpp  binary_buffer_reader.hpp  block.hpp  block_emitter.hpp  block_iterator.hpp  block_pool.hpp  block_queue.hpp  block_reader.hpp  block_sink.hpp  block_writer.hpp  buffer_chain.hpp  buffer_chain_manager.hpp  buffered_block_reader.hpp  chain_id.hpp  channel.hpp  channel_multiplexer.hpp  channel_sink.hpp  concat_block_source.hpp  data_manager.cpp  data_manager.hpp  discard_sink.hpp  dyn_block_reader.hpp  dyn_block_writer.hpp  emitter.hpp  emitter_target.hpp  file.hpp  input_line_iterator.hpp  iterator.hpp  manager.hpp  multiplexer.cpp  multiplexer.hpp  multiplexer_header.hpp  output_line_emitter.hpp  poly_block_writer.hpp  repository.hpp  serialization.hpp  serialization_cereal.hpp  serializer.hpp  (+6 more)
c7a/engine/: controller.hpp  dummy_comm_layer.hpp  hash_table.hpp  logger.cpp  logger.hpp  main.cpp  mock-network.hpp  operations.hpp  stage_builder.hpp  worker.hpp
c7a/examples/: word_count.hpp
c7a/mem/: allocator.hpp  allocator_base.hpp  (+4 more)
examples/: CMakeLists.txt  bench.cpp  bench_ref.cpp  dc3.cpp  kmeans.hpp  page_rank.cpp  page_rank.hpp  simple.cpp  word_count.cpp  word_count.hpp  word_count_run.cpp  word_count_simple.cpp  word_count_user_program.cpp  worker_main.cpp
frontends/: CMakeLists.txt
swig/: CMakeLists.txt
tbt/: CMakeLists.txt
tests/: CMakeLists.txt  CPPLINT.cfg  c7a-tests.cpp  c7a-tests.hpp  c7a_tests.cpp  c7a_tests.hpp  main.cpp
thrill/: CMakeLists.txt  c7a.hpp  thrill.hpp
(+1017 files in other folders)
